<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>br.com.devsource</groupId>
  <artifactId>gs1-128</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>GS1-128 Barcode</name>
  <description>Gs1-128 Barcode Decoder / Encoder</description>

  <developers>
    <developer>
      <id>guilherme.pacheco</id>
      <name>Guilherme Pacheco</name>
      <email>guilherfp@gmail.com</email>
      <url>https://github.com/guilherfp</url>
      <timezone>America/Sao_Paulo</timezone>
    </developer>
  </developers>

  <properties>
    <java.version>10</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <commons-lang3.version>3.10</commons-lang3.version>
    <assertj.version>3.15.0</assertj.version>
    <junit.version>5.6.2</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <!-- TEST -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

</project>